--- a/css/stileBasket.css
+++ b/css/stileBasket.css
@@ -4,3 +4,9 @@
     background:red;
     margin: 5px;
 }
+.catalogElement {
+    border: 2px solid black;
+    background:yellow;
+    margin: 5px;
+    padding: 10px;
+}
