По заданию 1 добавлены:  в task 7_1_2.html стр: 14 в js.js стр: 168, 174, 203 По заданию 2 добавлены в js.js стр: 90, 112-117, 122-141, 255, 292, 297, 310, 419.

--- a/style.css
+++ b/style.css
@@ -15,6 +15,14 @@
 .menuButton:hover{
     background: #009641;
 }
+.scoreString{
+    padding: 15px;
+    margin: 10px;
+    color: white;
+    background: #007b32;
+    text-align: center;
+    position: relative
+}
 #game{
     border-collapse: collapse;
     margin: 2% auto 0;
@@ -31,6 +39,9 @@ td.cell{
 }
 .food{
     background: #00d021;
+}
+.obstacles{
+    background:yellow;
 }
 .snakeBody{
     background: #e5e5e5;
